error handling & admin area filter

--- a/src/main/resources/locale_ru.properties
+++ b/src/main/resources/locale_ru.properties
@@ -17,3 +17,7 @@ login.forgot_password=Забыли пароль?
 login.login=Войти
 login.required=Это поле обязательно
 login.error=Неправильный логин или пароль
+error.page_not_found_title=Страница не найдена
+error.page_not_found_detail=К сожалению, запрашиваемая Вами страница не существует
+error.internal_error_title=Что-то пошло не так
+error.internal_error_detail=Со стороны сервера произошла ошибка
