--- a/src/main/resources/locale_ru.properties
+++ b/src/main/resources/locale_ru.properties
@@ -11,12 +11,17 @@ header.profile=Профиль
 header.settings=Настройки
 header.logout=Выйти
 header.login=Войти
+
 login.login_placeholder=Логин
 login.password_placeholder=Пароль
 login.forgot_password=Забыли пароль?
 login.login=Войти
 login.required=Это поле обязательно
 login.error=Неправильный логин или пароль
+
+mail.subject=BSUIRHUB | Подтверждение адреса электронной почты
+mail.message=Здравствуйте! Вы можете подтвердить адрес электронной почты, перейдя по этой ссылке: 
+
 error.page_not_found_title=Страница не найдена
 error.page_not_found_detail=К сожалению, запрашиваемая Вами страница не существует
 error.internal_error_title=Что-то пошло не так
