--- a/src/main/resources/locale_ru.properties
+++ b/src/main/resources/locale_ru.properties
@@ -22,6 +22,9 @@ login.error=Неправильный логин или пароль
 mail.subject=BSUIRHUB | Подтверждение адреса электронной почты
 mail.message=Здравствуйте! Вы можете подтвердить адрес электронной почты, перейдя по этой ссылке: 
 
+password_reset.subject=BSUIRHUB | Сброс пароля
+password_reset.message=Здравствуйте! Вы можете сбросить пароль, перейдя по этой ссылке: 
+
 error.page_not_found_title=Страница не найдена
 error.page_not_found_detail=К сожалению, запрашиваемая Вами страница не существует
 error.internal_error_title=Что-то пошло не так
