contact us page

--- a/src/main/resources/locale_ru.properties
+++ b/src/main/resources/locale_ru.properties
@@ -19,8 +19,8 @@ login.login=Войти
 login.required=Это поле обязательно
 login.error=Неправильный логин или пароль
 
-mail.subject=BSUIRHUB | Подтверждение адреса электронной почты
-mail.message=Здравствуйте! Вы можете подтвердить адрес электронной почты, перейдя по этой ссылке: 
+confirmation_mail.subject=BSUIRHUB | Подтверждение адреса электронной почты
+confirmation_mail.message=Здравствуйте! Вы можете подтвердить адрес электронной почты, перейдя по этой ссылке: 
 
 password_reset.subject=BSUIRHUB | Сброс пароля
 password_reset.message=Здравствуйте! Вы можете сбросить пароль, перейдя по этой ссылке: 
